src/bindings.h

// Callback typedefs owned by bindings.cpp (the mixer-output, visualization,
// buffering and metadata callback typedefs come from enums.h and
// audiobuffer/metadata_ffi.h).
typedef void (*dartVoiceEndedCallback_t)(unsigned int *);
typedef void (*dartFileLoadedCallback_t)(enum PlayerErrors *,
                                         char *completeFileName,
                                         unsigned int *, uint64_t *counter);
typedef void (*dartStateChangedCallback_t)(enum PlayerStateEvents *);
  //////////////////////////////////////////////////////////////
  /// Dart callbacks, engine lifecycle and mixer output capture

  FFI_PLUGIN_EXPORT void nativeFree(void *pointer);
  /// The callback to monitor when a voice ends.
  ///
  /// It is called by void `Soloud::stopVoice_internal(unsigned int aVoice)`
  /// when a voice ends and comes from the audio thread (so on the web, from a
  /// different web worker).
  FFI_PLUGIN_EXPORT void voiceEndedCallback(unsigned int *handle);
  /// Requests a device-idle evaluation after SoLoud stops or pauses a voice.
  /// SoLoud invokes this only after releasing its audio mutex.
  FFI_PLUGIN_EXPORT void voiceInactiveCallback();
  /// Set a Dart functions to call when an event occurs.
  ///
  /// [owner_engine_id] is the FlutterEngine whose isolate created these
  /// trampolines, or -1 where no engine lifecycle is available. It is recorded
  /// so that a detaching or hot-restarting engine can retire *its own*
  /// callables and never somebody else's.
  FFI_PLUGIN_EXPORT void
  setDartEventCallback(dartVoiceEndedCallback_t voice_ended_callback,
                       dartFileLoadedCallback_t file_loaded_callback,
                       dartStateChangedCallback_t state_changed_callback,
                       int64_t owner_engine_id);
  FFI_PLUGIN_EXPORT void clearDartCallbackRegistrations();
  /// Retire every Dart callable owned by [engine_id] because its isolate is
  /// going away (a hot restart, or its FlutterEngine being destroyed). Returns
  /// false when a different engine owns the live registration, so a detaching
  /// engine never retires another one's callables.
  FFI_PLUGIN_EXPORT bool clearDartCallbackRegistrationsForEngine(
      int64_t engine_id);
  FFI_PLUGIN_EXPORT void retireDartCallbacksFinalizer(void *token);
  /// Start capturing the master mixer output.
  ///
  /// [format] the output format from the MixerOutputFormat enum.
  /// [sampleRate] desired sample rate, or <=0 to use the engine sample rate.
  /// [channels] desired channel count, or <=0 to use the engine channel count.
  /// [bufferSizeBytes] size of the circular buffer in bytes.
  /// [notificationThresholdBytes] number of available bytes before a callback
  /// is fired.
  /// [chunkPCMFrames] fixed PCM chunk size in frames, or 0 to disable chunk
  /// mode.
  /// Returns [PlayerErrors.noError] if success.
  FFI_PLUGIN_EXPORT enum PlayerErrors startMixerCapture(
      int format, int sampleRate, int channels, int bufferSizeBytes,
      int notificationThresholdBytes, int chunkPCMFrames);
  /// Stop capturing the master mixer output.
  FFI_PLUGIN_EXPORT void stopMixerCapture();
  /// Returns 1 if mixer capture is running, 0 otherwise.
  FFI_PLUGIN_EXPORT int isMixerCaptureRunning();
  /// Get the pointer to the circular capture buffer.
  FFI_PLUGIN_EXPORT unsigned char *getMixerCaptureBufferPointer();
  /// Get the total size of the circular capture buffer in bytes.
  FFI_PLUGIN_EXPORT int getMixerCaptureBufferSize();
  /// Get the number of bytes available to read in the capture buffer.
  FFI_PLUGIN_EXPORT int getMixerCaptureAvailableBytes();
  /// Get the current read offset in the capture buffer.
  FFI_PLUGIN_EXPORT int getMixerCaptureReadOffset();
  /// Advance the read position by [bytes].
  FFI_PLUGIN_EXPORT void advanceMixerCaptureReadPosition(int bytes);
  /// Get a malloc'd copy of the WAV header of the current capture, or nullptr
  /// when the capture format has none. Free with nativeFree().
  FFI_PLUGIN_EXPORT unsigned char *getMixerOutputWavHeader();
  /// Publish the mixer-output data callable for [owner_engine_id].
  /// Returns whether the callable was published.
  FFI_PLUGIN_EXPORT bool setMixerOutputCallbackForEngine(
      dartMixerOutputDataCallback_t callback, int64_t owner_engine_id);
  /// Lifecycle-free entry point, for hosts where no registration is ever
  /// claimed. The web build binds this exported symbol directly from the
  /// prebuilt wasm, so its signature must not change.
  FFI_PLUGIN_EXPORT void setMixerOutputCallback(
      dartMixerOutputDataCallback_t callback);
  FFI_PLUGIN_EXPORT bool setVisualizationCallbackForEngine(
      dartVisualizationCallback_t callback, int64_t owner_engine_id);
  FFI_PLUGIN_EXPORT void setVisualizationCallback(
      dartVisualizationCallback_t callback);
  //////////////////////////////////////////////////////////////
  /// Engine

  /// Check if the libopus and libogg are available at build time.
  FFI_PLUGIN_EXPORT bool areXiphLibsAvailable();
  /// Initialize the player. Must be called before any other player functions.
  ///
  /// [sampleRate] the sample rate. Usually is 22050, 44100 (CD quality) or
  /// 48000.
  /// [bufferSize] the audio buffer size. Usually is 2048, but can be also 512
  /// when low latency is needed for example in games. [channels] 1=mono,
  /// 2=stereo, 4=quad, 6=5.1, 8=7.1.
  /// [devicePeriodFrames] small output device period used when
  /// [renderAheadFrames] enables the render-ahead ring; 0 = default (512).
  /// [renderAheadFrames] depth of the engine-owned render-ahead ring in
  /// frames; 0 disables it and keeps direct-to-device mixing.
  ///
  /// Returns [PlayerErrors.noError] if success.
  FFI_PLUGIN_EXPORT enum PlayerErrors initEngine(int deviceID,
                                                 unsigned int sampleRate,
                                                 unsigned int bufferSize,
                                                 unsigned int channels,
                                                 unsigned int lowLatency,
                                                 unsigned int devicePeriodFrames,
                                                 unsigned int renderAheadFrames);
  /// Android only: choose whether SoLoud tags the AAudio stream's
  /// usage/contentType (media/music) or leaves them unset so the app can
  /// manage AudioAttributes externally (e.g. via the audio_session plugin).
  /// Only takes effect with low-latency disabled. Call before initEngine().
  /// No effect on other backends. [managed] != 0 → media/music (default);
  /// 0 → leave unset.
  FFI_PLUGIN_EXPORT void setAndroidAAudioAttributes(unsigned int managed);
  /// Set how long the audio output device keeps running while the engine is
  /// idle (no active voices) before it is automatically stopped, on every
  /// platform. [timeoutMs] < 0 keeps the device running indefinitely while
  /// idle (the deferred idle-pause is suppressed, so the device keeps
  /// rendering silence and the app keeps its OS audio session alive) and
  /// starts it immediately if it was stopped. [timeoutMs] == 0 stops the
  /// device as soon as possible once idle. [timeoutMs] > 0 keeps it running
  /// for that many milliseconds after going idle. Any play/unpause before the
  /// deadline cancels the pending stop. The default is 500. Can be called any
  /// time.
  FFI_PLUGIN_EXPORT void setAudioDeviceIdleTimeout(int64_t timeoutMs);
  /// Stop the audio output device without deinitializing the engine. By
  /// default this is a successful no-op while voices are active. [force]
  /// stops the device even during active playback without mutating any voice.
  FFI_PLUGIN_EXPORT enum PlayerErrors stopAudioDevice(unsigned int force);
  /// Restart the audio output device previously stopped by stopAudioDevice(),
  /// so existing voices and loaded sounds keep operating. Idempotent: a no-op
  /// if the device is already started.
  FFI_PLUGIN_EXPORT enum PlayerErrors startAudioDevice();
  /// Get the current state of the audio output device. Returns
  /// [AudioDeviceState.audioDeviceUninitialized] if the engine is not
  /// initialized.
  FFI_PLUGIN_EXPORT enum AudioDeviceState getAudioDeviceState();
  /// Test-only hook that sends an interruption through miniaudio's normal
  /// notification callback. This is intentionally absent from the public API.
  FFI_PLUGIN_EXPORT void debugTriggerAudioInterruption(unsigned int began);
  /// List playback devices.
  FFI_PLUGIN_EXPORT void listPlaybackDevices(char **devicesName,
                                             int **deviceId, int **isDefault,
                                             int *n_devices);
  /// Change the playback device.
  ///
  /// [deviceID] the device ID. -1 for default OS output device.
  FFI_PLUGIN_EXPORT enum PlayerErrors changeDevice(int deviceID);
  /// Free the list of playback devices.
  FFI_PLUGIN_EXPORT void freeListPlaybackDevices(char **devicesName,
                                                 int **deviceId,
                                                 int **isDefault,
                                                 int n_devices);
  /// Must be called when there is no more need of the player or when closing
  /// the app.
  FFI_PLUGIN_EXPORT void dispose();
  /// Claim the native engine for a FlutterEngine ahead of initializing it.
  ///
  /// [owner_engine_id] is the FlutterEngine that will own the engine this
  /// initialization creates, or -1 on platforms with no engine-lifecycle
  /// hooks.
  FFI_PLUGIN_EXPORT void prepareEngineInit(int64_t owner_engine_id);
  FFI_PLUGIN_EXPORT void requestEngineShutdown();
  /// The epoch a prepare request must quote to be accepted.
  FFI_PLUGIN_EXPORT uint64_t currentEngineShutdownEpoch();
  /// Play already loaded sound identified by [hash]
  ///
  /// [soundHash] the unique sound hash of a sound
  /// [busId] the bus ID to play the sound on. 0 means the main engine.
  /// [volume] 1.0f full volume
  /// [pan] 0.0f centered
  /// [paused] 0 not paused
  /// [looping] whether to start the sound in looping state.
  /// [loopingStartAt] If looping is enabled, the loop point is, by default,
  /// the start of the stream. The loop start point can be set with this
  /// [loopingStartOffsetAt] Optional exact frame offset to restart looping
  /// from (-1 = inactive).
  /// [loopingEndOffsetAt] Optional exact frame offset to loop before
  /// (-1 = inactive).
  /// [scale] relative playback speed multiplier (1.0f = normal speed).
  /// [handle] pointer to the handle for this new sound
  /// Return the error if any and a new [handle] of this sound
  FFI_PLUGIN_EXPORT enum PlayerErrors play(
      unsigned int soundHash, unsigned int busId, float volume, float pan,
      bool paused, bool looping, double loopingStartAt, double loopingEndAt,
      int loopingStartOffsetAt, int loopingEndOffsetAt, float scale,
      unsigned int *handle);
  /// Stop already loaded sound identified by [handle] and clear it
  ///
  /// [handle]
  /// Returns [PlayerErrors.noError] if success, [PlayerErrors.backendNotInited]
  /// if the engine is not initialized, [PlayerErrors.soundHandleNotFound] if
  /// [handle] is not valid (for example the voice has already ended).
  FFI_PLUGIN_EXPORT enum PlayerErrors stop(unsigned int handle);