src/audiobuffer/metadata_ffi.h

/// Strucs to send metadata from C to Dart.
/// The "AudioMetadata" strucs got from *_stream_decoder.cpp in the getMetadata(), 
/// will be converted to these to be sent to Dart.

typedef enum
{
    UNKNOWN,
    OGG_OPUS,
    OGG_VORBIS,
    OGG_FLAC,
    MP3_WITH_ID3,
    MP3_STREAM,
    WAV,
    M4A,
    AAC,
    AC3,
    EAC3
} DetectedTypeFFI;