lib/src/bindings/flutter_soloud_ffigen.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:flutter_soloud/src/bindings.cpp')
library;

import 'dart:ffi' as ffi;

/// ///////////////////////////////////////////////////////////
/// Dart callbacks, engine lifecycle and mixer output capture
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void nativeFree(ffi.Pointer<ffi.Void> pointer);

/// The callback to monitor when a voice ends.
///
/// It is called by void `Soloud::stopVoice_internal(unsigned int aVoice)`
/// when a voice ends and comes from the audio thread (so on the web, from a
/// different web worker).
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.UnsignedInt>)>()
external void voiceEndedCallback(ffi.Pointer<ffi.UnsignedInt> handle);

/// Requests a device-idle evaluation after SoLoud stops or pauses a voice.
/// SoLoud invokes this only after releasing its audio mutex.
@ffi.Native<ffi.Void Function()>()
external void voiceInactiveCallback();

/// Set a Dart functions to call when an event occurs.
///
/// [owner_engine_id] is the FlutterEngine whose isolate created these
/// trampolines, or -1 where no engine lifecycle is available. It is recorded
/// so that a detaching or hot-restarting engine can retire *its own*
/// callables and never somebody else's.
@ffi.Native<
  ffi.Void Function(
    dartVoiceEndedCallback_t,
    dartFileLoadedCallback_t,
    dartStateChangedCallback_t,
    ffi.Int64,
  )
>()
external void setDartEventCallback(
  dartVoiceEndedCallback_t voice_ended_callback,
  dartFileLoadedCallback_t file_loaded_callback,
  dartStateChangedCallback_t state_changed_callback,
  int owner_engine_id,
);

@ffi.Native<ffi.Void Function()>()
external void clearDartCallbackRegistrations();

/// Retire every Dart callable owned by [engine_id] because its isolate is
/// going away (a hot restart, or its FlutterEngine being destroyed). Returns
/// false when a different engine owns the live registration, so a detaching
/// engine never retires another one's callables.
@ffi.Native<ffi.Bool Function(ffi.Int64)>()
external bool clearDartCallbackRegistrationsForEngine(int engine_id);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void retireDartCallbacksFinalizer(ffi.Pointer<ffi.Void> token);

/// Start capturing the master mixer output.
///
/// [format] the output format from the MixerOutputFormat enum.
/// [sampleRate] desired sample rate, or <=0 to use the engine sample rate.
/// [channels] desired channel count, or <=0 to use the engine channel count.
/// [bufferSizeBytes] size of the circular buffer in bytes.
/// [notificationThresholdBytes] number of available bytes before a callback
/// is fired.
/// [chunkPCMFrames] fixed PCM chunk size in frames, or 0 to disable chunk
/// mode.
/// Returns [PlayerErrors.noError] if success.
@ffi.Native<
  ffi.UnsignedInt Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.Int)
>(symbol: 'startMixerCapture')
external int _startMixerCapture(
  int format,
  int sampleRate,
  int channels,
  int bufferSizeBytes,
  int notificationThresholdBytes,
  int chunkPCMFrames,
);

PlayerErrors startMixerCapture(
  int format,
  int sampleRate,
  int channels,
  int bufferSizeBytes,
  int notificationThresholdBytes,
  int chunkPCMFrames,
) => PlayerErrors.fromValue(
  _startMixerCapture(
    format,
    sampleRate,
    channels,
    bufferSizeBytes,
    notificationThresholdBytes,
    chunkPCMFrames,
  ),
);

/// Stop capturing the master mixer output.
@ffi.Native<ffi.Void Function()>()
external void stopMixerCapture();

/// Returns 1 if mixer capture is running, 0 otherwise.
@ffi.Native<ffi.Int Function()>()
external int isMixerCaptureRunning();

/// Get the pointer to the circular capture buffer.
@ffi.Native<ffi.Pointer<ffi.UnsignedChar> Function()>()
external ffi.Pointer<ffi.UnsignedChar> getMixerCaptureBufferPointer();

/// Get the total size of the circular capture buffer in bytes.
@ffi.Native<ffi.Int Function()>()
external int getMixerCaptureBufferSize();

/// Get the number of bytes available to read in the capture buffer.
@ffi.Native<ffi.Int Function()>()
external int getMixerCaptureAvailableBytes();

/// Get the current read offset in the capture buffer.
@ffi.Native<ffi.Int Function()>()
external int getMixerCaptureReadOffset();

/// Advance the read position by [bytes].
@ffi.Native<ffi.Void Function(ffi.Int)>()
external void advanceMixerCaptureReadPosition(int bytes);

/// Get a malloc'd copy of the WAV header of the current capture, or nullptr
/// when the capture format has none. Free with nativeFree().
@ffi.Native<ffi.Pointer<ffi.UnsignedChar> Function()>()
external ffi.Pointer<ffi.UnsignedChar> getMixerOutputWavHeader();

/// Publish the mixer-output data callable for [owner_engine_id].
/// Returns whether the callable was published.
@ffi.Native<ffi.Bool Function(dartMixerOutputDataCallback_t, ffi.Int64)>()
external bool setMixerOutputCallbackForEngine(
  dartMixerOutputDataCallback_t callback,
  int owner_engine_id,
);

/// Lifecycle-free entry point, for hosts where no registration is ever
/// claimed. The web build binds this exported symbol directly from the
/// prebuilt wasm, so its signature must not change.
@ffi.Native<ffi.Void Function(dartMixerOutputDataCallback_t)>()
external void setMixerOutputCallback(dartMixerOutputDataCallback_t callback);

@ffi.Native<ffi.Bool Function(dartVisualizationCallback_t, ffi.Int64)>()
external bool setVisualizationCallbackForEngine(
  dartVisualizationCallback_t callback,
  int owner_engine_id,
);

@ffi.Native<ffi.Void Function(dartVisualizationCallback_t)>()
external void setVisualizationCallback(dartVisualizationCallback_t callback);

/// Check if the libopus and libogg are available at build time.
@ffi.Native<ffi.Bool Function()>()
external bool areXiphLibsAvailable();

/// Initialize the player. Must be called before any other player functions.
///
/// [sampleRate] the sample rate. Usually is 22050, 44100 (CD quality) or
/// 48000.
/// [bufferSize] the audio buffer size. Usually is 2048, but can be also 512
/// when low latency is needed for example in games. [channels] 1=mono,
/// 2=stereo, 4=quad, 6=5.1, 8=7.1.
/// [devicePeriodFrames] small output device period used when
/// [renderAheadFrames] enables the render-ahead ring; 0 = default (512).
/// [renderAheadFrames] depth of the engine-owned render-ahead ring in
/// frames; 0 disables it and keeps direct-to-device mixing.
///
/// Returns [PlayerErrors.noError] if success.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Int,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
  )
>(symbol: 'initEngine')
external int _initEngine(
  int deviceID,
  int sampleRate,
  int bufferSize,
  int channels,
  int lowLatency,
  int devicePeriodFrames,
  int renderAheadFrames,
);

PlayerErrors initEngine(
  int deviceID,
  int sampleRate,
  int bufferSize,
  int channels,
  int lowLatency,
  int devicePeriodFrames,
  int renderAheadFrames,
) => PlayerErrors.fromValue(
  _initEngine(
    deviceID,
    sampleRate,
    bufferSize,
    channels,
    lowLatency,
    devicePeriodFrames,
    renderAheadFrames,
  ),
);

/// Android only: choose whether SoLoud tags the AAudio stream's
/// usage/contentType (media/music) or leaves them unset so the app can
/// manage AudioAttributes externally (e.g. via the audio_session plugin).
/// Only takes effect with low-latency disabled. Call before initEngine().
/// No effect on other backends. [managed] != 0 → media/music (default);
/// 0 → leave unset.
@ffi.Native<ffi.Void Function(ffi.UnsignedInt)>()
external void setAndroidAAudioAttributes(int managed);

/// Set how long the audio output device keeps running while the engine is
/// idle (no active voices) before it is automatically stopped, on every
/// platform. [timeoutMs] < 0 keeps the device running indefinitely while
/// idle (the deferred idle-pause is suppressed, so the device keeps
/// rendering silence and the app keeps its OS audio session alive) and
/// starts it immediately if it was stopped. [timeoutMs] == 0 stops the
/// device as soon as possible once idle. [timeoutMs] > 0 keeps it running
/// for that many milliseconds after going idle. Any play/unpause before the
/// deadline cancels the pending stop. The default is 500. Can be called any
/// time.
@ffi.Native<ffi.Void Function(ffi.Int64)>()
external void setAudioDeviceIdleTimeout(int timeoutMs);

/// Stop the audio output device without deinitializing the engine. By
/// default this is a successful no-op while voices are active. [force]
/// stops the device even during active playback without mutating any voice.
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt)>(
  symbol: 'stopAudioDevice',
)
external int _stopAudioDevice(int force);

PlayerErrors stopAudioDevice(int force) =>
    PlayerErrors.fromValue(_stopAudioDevice(force));

/// Restart the audio output device previously stopped by stopAudioDevice(),
/// so existing voices and loaded sounds keep operating. Idempotent: a no-op
/// if the device is already started.
@ffi.Native<ffi.UnsignedInt Function()>(symbol: 'startAudioDevice')
external int _startAudioDevice();

PlayerErrors startAudioDevice() => PlayerErrors.fromValue(_startAudioDevice());

/// Get the current state of the audio output device. Returns
/// [AudioDeviceState.audioDeviceUninitialized] if the engine is not
/// initialized.
@ffi.Native<ffi.UnsignedInt Function()>(symbol: 'getAudioDeviceState')
external int _getAudioDeviceState();

AudioDeviceState getAudioDeviceState() =>
    AudioDeviceState.fromValue(_getAudioDeviceState());

/// Test-only hook that sends an interruption through miniaudio's normal
/// notification callback. This is intentionally absent from the public API.
@ffi.Native<ffi.Void Function(ffi.UnsignedInt)>()
external void debugTriggerAudioInterruption(int began);

/// List playback devices.
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Pointer<ffi.Int>>,
    ffi.Pointer<ffi.Pointer<ffi.Int>>,
    ffi.Pointer<ffi.Int>,
  )
>()
external void listPlaybackDevices(
  ffi.Pointer<ffi.Pointer<ffi.Char>> devicesName,
  ffi.Pointer<ffi.Pointer<ffi.Int>> deviceId,
  ffi.Pointer<ffi.Pointer<ffi.Int>> isDefault,
  ffi.Pointer<ffi.Int> n_devices,
);

/// Change the playback device.
///
/// [deviceID] the device ID. -1 for default OS output device.
@ffi.Native<ffi.UnsignedInt Function(ffi.Int)>(symbol: 'changeDevice')
external int _changeDevice(int deviceID);

PlayerErrors changeDevice(int deviceID) =>
    PlayerErrors.fromValue(_changeDevice(deviceID));

/// Free the list of playback devices.
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Pointer<ffi.Int>>,
    ffi.Pointer<ffi.Pointer<ffi.Int>>,
    ffi.Int,
  )
>()
external void freeListPlaybackDevices(
  ffi.Pointer<ffi.Pointer<ffi.Char>> devicesName,
  ffi.Pointer<ffi.Pointer<ffi.Int>> deviceId,
  ffi.Pointer<ffi.Pointer<ffi.Int>> isDefault,
  int n_devices,
);

/// Must be called when there is no more need of the player or when closing
/// the app.
@ffi.Native<ffi.Void Function()>()
external void dispose();

/// Claim the native engine for a FlutterEngine ahead of initializing it.
///
/// [owner_engine_id] is the FlutterEngine that will own the engine this
/// initialization creates, or -1 on platforms with no engine-lifecycle
/// hooks.
@ffi.Native<ffi.Void Function(ffi.Int64)>()
external void prepareEngineInit(int owner_engine_id);

@ffi.Native<ffi.Void Function()>()
external void requestEngineShutdown();

/// The epoch a prepare request must quote to be accepted.
@ffi.Native<ffi.Uint64 Function()>()
external int currentEngineShutdownEpoch();
